# hostify

./: .gitignore  CHANGELOG.md  CLI_TEST_RESULTS.md  CLOUDFLARE_SETUP.md  CREDITS_UPDATE.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUBLISH_v0.2.0.md  README.md  RELEASE_v0.2.0_COMPLETE.md  SETUP_GUIDE.md  THEME_UPDATE.md  cleanup_output.txt  example_port.py  example_static.py  force_cleanup_tunnel.py  host_demo.py  manual_test.ps1  publish.py  pyproject.toml  quick_test.py  setup.py  test_app.py  test_cli_linux.sh  test_cli_windows.ps1  test_examples.py  test_library_update.py  test_token.py  update_pypi.py
.github/workflows/: docs.yml
demo_site/: index.html  script.js  style.css
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst  user_guide.rst
docs/source/_static/: custom.css  theme-toggle.js
examples/: existing_server.py  flask_example.py  static_site.py
hostify/: __init__.py  cli.py  cloudflare.py  cloudflared.py  host.py  utils.py
tests/: test_suite.py
