[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hostify"
version = "0.2.0"
description = "Effortless application hosting using Cloudflare Tunnels."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yuvraj Arora", email = "yuvrajaroraw18@gmail.com"}
]
keywords = ["cloudflare", "tunnel", "hosting", "server", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yuvrajarora1805/hostify"
Documentation = "https://github.com/yuvrajarora1805/hostify#readme"
Repository = "https://github.com/yuvrajarora1805/hostify"
Issues = "https://github.com/yuvrajarora1805/hostify/issues"

[project.scripts]
hostify = "hostify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hostify*"]
exclude = ["tests*", "examples*"]
